--- a/server/makefile
+++ b/server/makefile
@@ -1,4 +1,4 @@
 server:server.c Diffie_hellman.o
-	gcc server.c -o server Diffie_hellman.o -l gmp
+	gcc server.c -o server Diffie_hellman.o aes/*.o -l gmp
 Diffie_hellman.o:Diffie_hellman.c
 	gcc -c Diffie_hellman.c -o Diffie_hellman.o
