--- a/server/makefile
+++ b/server/makefile
@@ -1,4 +1,5 @@
-server:server.c Diffie_hellman.o
-	gcc server.c -o server Diffie_hellman.o aes/*.o -l gmp
+SRC:=server.c
+server:${SRC} Diffie_hellman.o
+	gcc $< -o server Diffie_hellman.o aes/*.o -l gmp
 Diffie_hellman.o:Diffie_hellman.c
 	gcc -c Diffie_hellman.c -o Diffie_hellman.o
