--- a/client/makefile
+++ b/client/makefile
@@ -1,4 +1,5 @@
-client:client.c Diffie_hellman.o aes/*.o
-	gcc client.c -o client Diffie_hellman.o aes/*.o -l gmp
+SRC:=client.c
+client:${SRC} Diffie_hellman.o aes/*.o
+	gcc ${SRC} -o client Diffie_hellman.o aes/*.o -l gmp
 Diffie_hellman.o:Diffie_hellman.c
 	gcc -c Diffie_hellman.c -o Diffie_hellman.o
