--- a/man-in-middle/makefile
+++ b/man-in-middle/makefile
@@ -1,4 +1,4 @@
-main-in-middle:man-in-middle.c Diffie_hellman.o
-	gcc man-in-middle.c -o man-in-middle Diffie_hellman.o aes/*.o -l gmp
+main-in-middle:main.c Diffie_hellman.o
+	gcc main.c -o man-in-middle Diffie_hellman.o aes/*.o -l gmp -l pcap
 Diffie_hellman.o:Diffie_hellman.c
 	gcc -c Diffie_hellman.c -o Diffie_hellman.o
